compiler/testData/cli/jvm/werror.out
error: warnings found and -Werror specified
compiler/testData/cli/jvm/werror.kt:2:6: warning: unnecessary non-null assertion (!!) on a non-null receiver of type String
    s!!
     ^
COMPILATION_ERROR
