compiler/testData/cli/jvm/werror.kt
fun foo(a: Int, b: Int) {
    println(a / 0)
    println(b / 0)
}
